Modified block quote styling to stop it putting a badly formed character overlapping the quote.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,3 +32,7 @@ img + em {
 	height: 1.5em;
 	float: right;
 };
+
+.markdown-body blockquote:before {
+	content: inherit;
+};
